@@ -1740,5 +1740,11 @@ Sun Feb 15 14:44:14 CET 2004
 
 	- Added missing braces to array parsing.
 	- Allowed some C keywords to be used as SQL column names.
+	
+Mon Feb 16 08:17:19 CET 2004
+
+	- Cleaned up parser a little bit. It does not make sense to allow a
+	  typename to be typedef'ed that cannot be parsed as variable type.
+	- Allowed some SQL keywords to be used as C variable names.
 	- Set ecpg version to 3.1.1.
 
